correcciones y altaReserva
