# app/Models/Reserva.php
@@ -8,6 +8,12 @@ use Illuminate\Database\Eloquent\Model;
 class Reserva extends Model
 {
     use HasFactory;
+    protected $fillable = [
+        'fecha_reserva',
+        'hora_reserva',
+        'email_cliente',
+    ];
+
     public function detalle_reserva()
     {
         return $this->hasMany(DetalleReserva::class, 'id_reserva');
